# MandelbrotCpp

./: CMakeLists.txt  Makefile  MandelbrotPiece.cpp  MandelbrotPiece.h  MandelbrotPng.cpp  Params.cpp  Params.h  PieceFactory.h  PieceManager.h
